--- a/admin/index.html
+++ b/admin/index.html
@@ -102,8 +102,30 @@
         console.log(publicURL.data.publicUrl);
         const imageItem = document.createElement('img');
         imageItem.src = publicURL.data.publicUrl;
+
+        // Add right-click event for deleting images
+        imageItem.addEventListener('contextmenu', (event) => {
+          event.preventDefault();  // Prevent the default context menu from appearing
+          const confirmDelete = confirm('Are you sure you want to delete this photo?');
+          if (confirmDelete) {
+            deleteImage(file.name);
+          }
+        });
+
         galleryDiv.appendChild(imageItem);
       });
+    }
+
+    // Delete image function
+    async function deleteImage(fileName) {
+      const { error } = await supabase.storage.from(bucket).remove([fileName]);
+      if (error) {
+        console.error('Error deleting image:', error);
+        alert('Error deleting image!');
+      } else {
+        alert('Image deleted successfully!');
+        fetchImages();  // Refresh gallery after deletion
+      }
     }
 
     // Fetch images on page load
