--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photography Gallery</title>
+  <title>Leila's Photography Gallery</title>
   <style>
     body {
       background-color: #f0f0f0;
