change name update

--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leila's Photography Gallery</title>
+  <title>Admin</title>
   <style>
     body {
       background-color: #f0f0f0;
@@ -28,6 +28,7 @@
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
       cursor: pointer;
     }
+    
   </style>
 </head>
 
