--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 </head>
 
 <body>
-  <h1>Photography Gallery</h1>
+  <h1>Leila's Photography Gallery</h1>
 
   <!-- Image Gallery Section -->
-  <h2>Uploaded Images</h2>
   <div class="gallery" id="gallery"></div>
 
   <script type="module">
