--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin</title>
+  <title>Admin - Leila's Photography Gallery</title>
   <style>
     body {
       background-color: #f0f0f0;
@@ -15,72 +15,94 @@
       justify-content: center;
     }
 
-    .gallery img {
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .album-cover, .gallery-image {
+      position: relative;
       width: 200px;
+      height: 200px;
       margin: 10px;
       border-radius: 10%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.3s ease, transform 0.5s ease;
+      overflow: hidden;
     }
 
-    .gallery img:hover {
+    .album-cover:hover, .gallery-image:hover {
       transform: scale(1.05);
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
       cursor: pointer;
+    }
+
+    .album-cover img, .gallery-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      transition: none;
+    }
+
+    .album-cover div {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      text-align: center;
+      font-weight: bold;
+      padding: 5px;
+      box-sizing: border-box;
+    }
+
+    .upload-section {
+      margin-top: 20px;
+    }
+
+    .back-button {
+      font-size: 1.2em;
+      margin: 20px;
+      cursor: pointer;
+      color: #007BFF;
+      text-decoration: underline;
     }
   </style>
 </head>
 
 <body>
-  <h1>Admin</h1>
+  <h1 id="galleryTitle">Admin - Leila's Photography Gallery</h1>
 
-  <!-- File Upload Section -->
-  <div>
+  <!-- Back Button -->
+  <div class="back-button" id="backButton" style="display: none;">← Back to Albums</div>
+
+  <!-- Upload Section -->
+  <div class="upload-section" style="display:none;" id="uploadSection">
     <input type="file" id="fileInput" />
-    <button id="uploadButton">Upload</button>
+    <button id="uploadButton">Upload to Album</button>
   </div>
 
   <!-- Image Gallery Section -->
-  <h2>Uploaded Images</h2>
   <div class="gallery" id="gallery"></div>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
     // Initialize Supabase
-    const supabaseUrl = 'https://kfrjmqebnjwpnzafbwys.supabase.co';  // Replace with your Supabase URL
-    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtmcmptcWVibmp3cG56YWZid3lzIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyNzkxMzE0OSwiZXhwIjoyMDQzNDg5MTQ5fQ.XTHT8deRRj95NbPu4zysBACmv9sj-_kSowKLJ6E-zMw';  // Replace with your public anon key
+    const supabaseUrl = 'https://kfrjmqebnjwpnzafbwys.supabase.co';
+    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtmcmptcWVibmp3cG56YWZid3lzIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyNzkxMzE0OSwiZXhwIjoyMDQzNDg5MTQ5fQ.XTHT8deRRj95NbPu4zysBACmv9sj-_kSowKLJ6E-zMw';
     const supabase = createClient(supabaseUrl, supabaseAnonKey);
 
-    const bucket = "photography.1";  // Using 'Admin' as the bucket name
+    const bucket = "photography.1";  // Your Supabase bucket name
+    let currentAlbum = ''; // Track the current album
 
-    // Upload file function
-    window.uploadFile = async function () {
-      const fileInput = document.getElementById('fileInput');
-      const file = fileInput.files[0];
-
-      if (file) {
-        const { data, error } = await supabase.storage
-          .from(bucket)
-          .upload(file.name, file);
-
-        if (error) {
-          console.error(error);
-          alert('Upload failed!');
-        } else {
-          alert('File uploaded successfully!');
-          fetchImages();  // Refresh gallery after upload
-        }
-      } else {
-        alert('Please select a file to upload.');
-      }
-    };
-
-    // Fetch and display images in the gallery
-    async function fetchImages() {
-      const { data, error } = await supabase.storage
+    // Fetch and display folders in the gallery
+    async function fetchFolders() {
+      const { data: items, error } = await supabase.storage
         .from(bucket)
-        .list('', { limit: 100 });
+        .list('', { limit: 100, sortBy: { column: 'name' } });
 
       if (error) {
         console.error(error);
@@ -88,45 +110,111 @@
       }
 
       const galleryDiv = document.getElementById('gallery');
-      galleryDiv.innerHTML = '';  // Clear existing images
+      galleryDiv.innerHTML = '';  // Clear existing content
+      document.getElementById('backButton').style.display = 'none';  // Hide back button on main page
+      document.getElementById('galleryTitle').textContent = "Admin - Leila's Photography Gallery";  // Reset title
+      document.getElementById('uploadSection').style.display = 'none';  // Hide upload section
 
-      if (data.length === 0) {
-        galleryDiv.innerHTML = '<p>No images found.</p>';
+      if (items.length === 0) {
+        galleryDiv.innerHTML = '<p>No albums found.</p>';
         return;
       }
 
-      data.forEach(async (file) => {
-        const publicURL = supabase.storage.from(bucket).getPublicUrl(file.name);
-        const imageItem = document.createElement('img');
-        imageItem.src = publicURL.data.publicUrl;
+      const folderList = items.filter(item => !item.name.includes('.'));
 
-        // Add right-click event for deleting images on desktop
+      folderList.forEach(async (folder) => {
+        const albumCover = document.createElement('div');
+        albumCover.classList.add('album-cover');
+
+        // Fetch the first image from the folder
+        const { data: images, error: imageError } = await supabase.storage
+          .from(bucket)
+          .list(folder.name, { limit: 1 });
+
+        if (imageError || images.length === 0) {
+          console.error(imageError || 'No images found in the folder');
+          return;
+        }
+
+        const firstImageURL = supabase.storage.from(bucket).getPublicUrl(`${folder.name}/${images[0].name}`).data.publicUrl;
+
+        // Create album cover image and title
+        const imgElement = document.createElement('img');
+        imgElement.src = firstImageURL;
+
+        const titleElement = document.createElement('div');
+        titleElement.classList.add('album-title');
+        titleElement.textContent = folder.name;
+
+        albumCover.appendChild(imgElement);
+        albumCover.appendChild(titleElement);
+
+        // Add click event to open album view
+        albumCover.addEventListener('click', () => openAlbum(folder.name));
+
+        galleryDiv.appendChild(albumCover);
+      });
+    }
+
+    // Open an album and show its images
+    async function openAlbum(albumName) {
+      currentAlbum = albumName;
+      const { data: images, error } = await supabase.storage
+        .from(bucket)
+        .list(albumName, { limit: 100 });
+
+      if (error) {
+        console.error(error);
+        return;
+      }
+
+      const galleryDiv = document.getElementById('gallery');
+      galleryDiv.innerHTML = '';  // Clear current gallery
+
+      images.forEach(async (file) => {
+        const publicURL = supabase.storage.from(bucket).getPublicUrl(`${albumName}/${file.name}`).data.publicUrl;
+        const imageItem = document.createElement('div');
+        imageItem.classList.add('gallery-image'); 
+        imageItem.innerHTML = `<img src="${publicURL}" alt="${file.name}"/>`;
+
+        // Add right-click event for deleting images
         imageItem.addEventListener('contextmenu', (event) => {
-          event.preventDefault();  // Prevent the default context menu from appearing
-          const confirmDelete = confirm('Are you sure you want to delete this photo?');
+          event.preventDefault();
+          const confirmDelete = confirm('Are you sure you want to delete this image?');
           if (confirmDelete) {
-            deleteImage(file.name);
+            deleteImage(`${albumName}/${file.name}`);
           }
-        });
-
-        // Add press-and-hold event for mobile
-        let touchTimer;
-        imageItem.addEventListener('touchstart', (event) => {
-          touchTimer = setTimeout(() => {
-            const confirmDelete = confirm('Are you sure you want to delete this photo?');
-            if (confirmDelete) {
-              deleteImage(file.name);
-            }
-          }, 1000); // Trigger delete after 1 second of holding
-        });
-
-        imageItem.addEventListener('touchend', () => {
-          clearTimeout(touchTimer);  // Cancel if the touch is released before 1 second
         });
 
         galleryDiv.appendChild(imageItem);
       });
+
+      document.getElementById('galleryTitle').textContent = albumName;
+      document.getElementById('backButton').style.display = 'block';
+      document.getElementById('uploadSection').style.display = 'block'; // Show upload section
     }
+
+    // Upload file function
+    document.getElementById('uploadButton').addEventListener('click', async () => {
+      const fileInput = document.getElementById('fileInput');
+      const file = fileInput.files[0];
+
+      if (file && currentAlbum) {
+        const { data, error } = await supabase.storage
+          .from(bucket)
+          .upload(`${currentAlbum}/${file.name}`, file);
+
+        if (error) {
+          console.error(error);
+          alert('Upload failed!');
+        } else {
+          alert('File uploaded successfully!');
+          openAlbum(currentAlbum);  // Refresh album after upload
+        }
+      } else {
+        alert('Please select a file and album to upload.');
+      }
+    });
 
     // Delete image function
     async function deleteImage(fileName) {
@@ -136,15 +224,17 @@
         alert('Error deleting image!');
       } else {
         alert('Image deleted successfully!');
-        fetchImages();  // Refresh gallery after deletion
+        openAlbum(currentAlbum);  // Refresh album after deletion
       }
     }
 
-    // Fetch images on page load
-    window.onload = fetchImages;
+    // Back to the main gallery view
+    document.getElementById('backButton').addEventListener('click', () => {
+      fetchFolders();
+    });
 
-    // Attach the upload function to the button
-    document.getElementById('uploadButton').addEventListener('click', window.uploadFile);
+    // Fetch folders on page load
+    window.onload = fetchFolders;
   </script>
 </body>
 
