refactor, admin improvements

--- a/index.html
+++ b/index.html
@@ -5,117 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leila's Photography Gallery</title>
-  <style>
-    body {
-      background-color: #f0f0f0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .album-cover {
-      position: relative;
-      width: 200px;
-      height: 200px;
-      margin: 10px;
-      border-radius: 10%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.3s ease, transform 0.5s ease;
-      overflow: hidden;
-    }
-
-    .album-cover:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      cursor: pointer;
-    }
-
-    .album-cover img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      transition: none;
-    }
-
-    .album-cover div {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      text-align: center;
-      font-weight: bold;
-      padding: 5px;
-      box-sizing: border-box;
-    }
-
-    .album-cover div button {
-      background-color: transparent;
-      border: none;
-      color: white;
-      font-size: 1.2em;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-
-    .album-cover div button:hover {
-      transform: scale(1.3);
-    }
-
-    .back-button {
-      font-size: 1.2em;
-      margin: 20px;
-      cursor: pointer;
-      color: #007BFF;
-      text-decoration: underline;
-    }
-
-    /* Fullscreen Overlay */
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      /* Semi-transparent background */
-      display: none;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .overlay img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      opacity: 1;
-      /* Always fully opaque */
-      transition: none;
-      /* Remove any transition for opacity */
-    }
-
-    .overlay.show {
-      display: flex;
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-size: 24px;
-      color: white;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -127,201 +17,23 @@
   <!-- Image Gallery Section -->
   <div class="gallery" id="gallery"></div>
 
-  <!-- Fullscreen Overlay for Zoom -->
-  <div class="overlay" id="overlay">
-    <span class="close-btn" id="closeBtn">&times;</span>
-    <img id="zoomedImage" src="" alt="Zoomed Image" />
-  </div>
-
   <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+    import { fetchFolders, fetchAlbumImages, likeImage } from './gallery.js';
 
-    // Initialize Supabase
-    const supabaseUrl = 'https://kfrjmqebnjwpnzafbwys.supabase.co';  // Replace with your Supabase URL
-    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtmcmptcWVibmp3cG56YWZid3lzIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyNzkxMzE0OSwiZXhwIjoyMDQzNDg5MTQ5fQ.XTHT8deRRj95NbPu4zysBACmv9sj-_kSowKLJ6E-zMw';  // Replace with your public anon key
-    const supabase = createClient(supabaseUrl, supabaseAnonKey);
+    const galleryDiv = document.getElementById('gallery');
+    const backButton = document.getElementById('backButton');
+    const titleElement = document.getElementById('galleryTitle');
 
-    const bucket = "photography.1";  // Your Supabase bucket name
-
-    // Fetch and display folders in the gallery
-    async function fetchFolders() {
-      const { data: items, error } = await supabase.storage
-        .from(bucket)
-        .list('', { limit: 100, sortBy: { column: 'name' } });
-
-      if (error) {
-        console.error(error);
-        return;
-      }
-
-      const galleryDiv = document.getElementById('gallery');
-      galleryDiv.innerHTML = '';  // Clear existing content
-      document.getElementById('backButton').style.display = 'none';  // Hide back button on main page
-      document.getElementById('galleryTitle').textContent = "Leila's Photography Gallery";  // Reset title
-
-      if (items.length === 0) {
-        galleryDiv.innerHTML = '<p>No albums found.</p>';
-        return;
-      }
-
-      // Filter out files and keep only folders (no extension in name)
-      const folderList = items.filter(item => !item.name.includes('.'));
-
-      folderList.forEach(async (folder) => {
-        const albumCover = document.createElement('div');
-        albumCover.classList.add('album-cover');
-
-        // Fetch the first image from the folder
-        const { data: images, error: imageError } = await supabase.storage
-          .from(bucket)
-          .list(folder.name, { limit: 1 });
-
-        if (imageError || images.length === 0) {
-          console.error(imageError || 'No images found in the folder');
-          return;
-        }
-
-        const firstImageURL = supabase.storage.from(bucket).getPublicUrl(`${folder.name}/${images[0].name}`).data.publicUrl;
-
-        // Create album cover image and title
-        const imgElement = document.createElement('img');
-        imgElement.src = firstImageURL;
-
-        const titleElement = document.createElement('div');
-        titleElement.classList.add('album-title');
-        titleElement.textContent = folder.name;
-
-        albumCover.appendChild(imgElement);
-        albumCover.appendChild(titleElement);
-
-        // Add click event to open album view
-        albumCover.addEventListener('click', () => openAlbum(folder.name));
-
-        galleryDiv.appendChild(albumCover);
-      });
+    function openAlbum(albumName) {
+      fetchAlbumImages(albumName, galleryDiv, titleElement, backButton, likeImage);
     }
 
-    // Open an album and show its images
-    async function openAlbum(albumName) {
-      const { data: images, error } = await supabase.storage
-        .from(bucket)
-        .list(albumName, { limit: 100 });
-
-      if (error) {
-        console.error(error);
-        return;
-      }
-
-      const galleryDiv = document.getElementById('gallery');
-      galleryDiv.innerHTML = '';  // Clear current gallery
-
-      // Fetch image metadata from database
-      const { data: metadata, error: metaError } = await supabase
-        .from('images')
-        .select('id, image_name, likes')
-        .eq('album_name', albumName);
-
-      if (metaError) {
-        console.error('Error fetching image metadata:', metaError);
-        return;
-      }
-
-      images.forEach(async (file) => {
-        const publicURL = supabase.storage.from(bucket).getPublicUrl(`${albumName}/${file.name}`).data.publicUrl;
-        const meta = metadata.find(m => m.image_name === file.name);
-        const likes = meta ? meta.likes : 0;
-        const imageId = meta ? meta.id : null;
-
-        const imageItem = document.createElement('div');
-        imageItem.classList.add('album-cover'); // Reuse .album-cover styling
-
-        const imgElement = document.createElement('img');
-        imgElement.src = publicURL;
-
-        const infoElement = document.createElement('div');
-        infoElement.innerHTML = `<button onclick="likeImage('${imageId}', this)">❤️</button> ${likes}`;
-
-        imageItem.appendChild(imgElement);
-        imageItem.appendChild(infoElement);
-        galleryDiv.appendChild(imageItem);
-
-        // Add click event for zooming (overlay)
-        imgElement.addEventListener('click', () => {
-          const zoomedImage = document.getElementById('zoomedImage');
-          zoomedImage.src = publicURL;
-          document.getElementById('overlay').classList.add('show');
-        });
-      });
-
-      // Update gallery title with the album name
-      document.getElementById('galleryTitle').textContent = albumName;
-      // Show the back button
-      document.getElementById('backButton').style.display = 'block';
-    }
-
-    // Like an image
-    async function likeImage(imageId, button) {
-      if (!imageId) {
-        console.error('Invalid image ID for liking');
-        return;
-      }
-
-      // First, get the current like count
-      const { data: currentData, error: currentError } = await supabase
-        .from('images')
-        .select('likes')
-        .eq('id', imageId)
-        .single();
-
-      if (currentError) {
-        console.error('Error fetching current likes:', currentError);
-        return;
-      }
-
-      const currentLikes = currentData.likes;
-
-      // Increment the like count
-      const newLikes = currentLikes + 1;
-
-      // Update the like count in the database
-      const { data, error } = await supabase
-        .from('images')
-        .update({ likes: newLikes })
-        .eq('id', imageId)
-        .select('likes');
-
-      if (error) {
-        console.error('Error updating likes:', error);
-        return;
-      }
-
-      // Update the like count in the UI
-      if (data && data.length > 0) {
-        button.parentElement.innerHTML = `<button onclick="likeImage('${imageId}', this)">❤️</button> ${data[0].likes}`;
-      }
-    }
-
-    // Back to the main gallery view
-    document.getElementById('backButton').addEventListener('click', () => {
-      fetchFolders();
+    backButton.addEventListener('click', () => {
+      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
     });
 
-    // Close zoom overlay
-    document.getElementById('closeBtn').addEventListener('click', () => {
-      document.getElementById('overlay').classList.remove('show');
-    });
-
-    // Close zoom overlay by clicking outside the image
-    document.getElementById('overlay').addEventListener('click', (event) => {
-      if (event.target === event.currentTarget) {
-        document.getElementById('overlay').classList.remove('show');
-      }
-    });
-
-    // Fetch folders on page load
-    window.onload = fetchFolders;
-    // Expose likeImage to the global scope
-    window.likeImage = likeImage;
+    window.onload = () => fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
+    window.likeImage = likeImage;  // Expose likeImage globally
   </script>
 </body>
 
