--- a/admin/index.html
+++ b/admin/index.html
@@ -5,71 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - Leila's Photography Gallery</title>
-  <style>
-    body {
-      background-color: #f0f0f0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .album-cover, .gallery-image {
-      position: relative;
-      width: 200px;
-      height: 200px;
-      margin: 10px;
-      border-radius: 10%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.3s ease, transform 0.5s ease;
-      overflow: hidden;
-    }
-
-    .album-cover:hover, .gallery-image:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      cursor: pointer;
-    }
-
-    .album-cover img, .gallery-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      transition: none;
-    }
-
-    .album-cover div {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      text-align: center;
-      font-weight: bold;
-      padding: 5px;
-      box-sizing: border-box;
-    }
-
-    .upload-section {
-      margin-top: 20px;
-    }
-
-    .back-button {
-      font-size: 1.2em;
-      margin: 20px;
-      cursor: pointer;
-      color: #007BFF;
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -88,77 +24,19 @@
   <div class="gallery" id="gallery"></div>
 
   <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+    import { fetchFolders, fetchAlbumImages, supabase, bucket } from '../gallery.js';
 
-    // Initialize Supabase
-    const supabaseUrl = 'https://kfrjmqebnjwpnzafbwys.supabase.co';
-    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtmcmptcWVibmp3cG56YWZid3lzIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyNzkxMzE0OSwiZXhwIjoyMDQzNDg5MTQ5fQ.XTHT8deRRj95NbPu4zysBACmv9sj-_kSowKLJ6E-zMw';
-    const supabase = createClient(supabaseUrl, supabaseAnonKey);
+    const galleryDiv = document.getElementById('gallery');
+    const backButton = document.getElementById('backButton');
+    const titleElement = document.getElementById('galleryTitle');
+    const fileInput = document.getElementById('fileInput');
+    const uploadButton = document.getElementById('uploadButton');
+    let currentAlbum = '';
 
-    const bucket = "photography.1";  // Your Supabase bucket name
-    let currentAlbum = ''; // Track the current album
-
-    // Fetch and display folders in the gallery
-    async function fetchFolders() {
-      const { data: items, error } = await supabase.storage
-        .from(bucket)
-        .list('', { limit: 100, sortBy: { column: 'name' } });
-
-      if (error) {
-        console.error(error);
-        return;
-      }
-
-      const galleryDiv = document.getElementById('gallery');
-      galleryDiv.innerHTML = '';  // Clear existing content
-      document.getElementById('backButton').style.display = 'none';  // Hide back button on main page
-      document.getElementById('galleryTitle').textContent = "Admin - Leila's Photography Gallery";  // Reset title
-      document.getElementById('uploadSection').style.display = 'none';  // Hide upload section
-
-      if (items.length === 0) {
-        galleryDiv.innerHTML = '<p>No albums found.</p>';
-        return;
-      }
-
-      const folderList = items.filter(item => !item.name.includes('.'));
-
-      folderList.forEach(async (folder) => {
-        const albumCover = document.createElement('div');
-        albumCover.classList.add('album-cover');
-
-        // Fetch the first image from the folder
-        const { data: images, error: imageError } = await supabase.storage
-          .from(bucket)
-          .list(folder.name, { limit: 1 });
-
-        if (imageError || images.length === 0) {
-          console.error(imageError || 'No images found in the folder');
-          return;
-        }
-
-        const firstImageURL = supabase.storage.from(bucket).getPublicUrl(`${folder.name}/${images[0].name}`).data.publicUrl;
-
-        // Create album cover image and title
-        const imgElement = document.createElement('img');
-        imgElement.src = firstImageURL;
-
-        const titleElement = document.createElement('div');
-        titleElement.classList.add('album-title');
-        titleElement.textContent = folder.name;
-
-        albumCover.appendChild(imgElement);
-        albumCover.appendChild(titleElement);
-
-        // Add click event to open album view
-        albumCover.addEventListener('click', () => openAlbum(folder.name));
-
-        galleryDiv.appendChild(albumCover);
-      });
-    }
-
-    // Open an album and show its images
     async function openAlbum(albumName) {
       currentAlbum = albumName;
+
+      // Fetch images for the album and render them
       const { data: images, error } = await supabase.storage
         .from(bucket)
         .list(albumName, { limit: 100 });
@@ -173,71 +51,122 @@
 
       images.forEach(async (file) => {
         const publicURL = supabase.storage.from(bucket).getPublicUrl(`${albumName}/${file.name}`).data.publicUrl;
-        const imageItem = document.createElement('div');
-        imageItem.classList.add('gallery-image'); 
-        imageItem.innerHTML = `<img src="${publicURL}" alt="${file.name}"/>`;
 
-        // Add right-click event for deleting images
-        imageItem.addEventListener('contextmenu', (event) => {
-          event.preventDefault();
-          const confirmDelete = confirm('Are you sure you want to delete this image?');
-          if (confirmDelete) {
-            deleteImage(`${albumName}/${file.name}`);
-          }
-        });
+        // Create an image item with .album-cover styling
+        const imageItem = document.createElement('div');
+        imageItem.classList.add('album-cover');  // Reuse the album cover class for consistency
+
+        const imgElement = document.createElement('img');
+        imgElement.src = publicURL;
+
+        // Add the delete button and likes section as a div inside the image container
+        const infoElement = document.createElement('div');
+        infoElement.innerHTML = `<button onclick="deleteImage('${albumName}/${file.name}')">🗑️</button>`;
+
+        imageItem.appendChild(imgElement);
+        imageItem.appendChild(infoElement);
+
+        // Add right-click and long-press delete functionality
+        addDeleteFunctionality(imageItem, `${albumName}/${file.name}`);
 
         galleryDiv.appendChild(imageItem);
       });
 
       document.getElementById('galleryTitle').textContent = albumName;
       document.getElementById('backButton').style.display = 'block';
-      document.getElementById('uploadSection').style.display = 'block'; // Show upload section
+      document.getElementById('uploadSection').style.display = 'block';
     }
 
-    // Upload file function
-    document.getElementById('uploadButton').addEventListener('click', async () => {
-      const fileInput = document.getElementById('fileInput');
+    // Back to the main gallery (albums) view
+    document.getElementById('backButton').addEventListener('click', () => {
+      document.getElementById('uploadSection').style.display = 'none';  // Hide the upload section when showing albums
+      document.getElementById('backButton').style.display = 'none';     // Hide the back button when showing albums
+      galleryDiv.innerHTML = '';  // Clear existing content
+      backButton.style.display = 'none';  // Hide back button on main page
+      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);  // Call fetchFolders with the necessary parameters
+    });
+
+    uploadButton.addEventListener('click', async () => {
       const file = fileInput.files[0];
-
       if (file && currentAlbum) {
-        const { data, error } = await supabase.storage
-          .from(bucket)
-          .upload(`${currentAlbum}/${file.name}`, file);
-
+        const { error } = await supabase.storage.from(bucket).upload(`${currentAlbum}/${file.name}`, file);
         if (error) {
-          console.error(error);
-          alert('Upload failed!');
-        } else {
-          alert('File uploaded successfully!');
-          openAlbum(currentAlbum);  // Refresh album after upload
+          console.error('Upload failed:', error);
+          return;
         }
-      } else {
-        alert('Please select a file and album to upload.');
+
+        // Insert into the images table
+        const { error: insertError } = await supabase
+          .from('images')
+          .insert({
+            image_name: file.name,
+            album_name: currentAlbum,
+            storage_path: `${currentAlbum}/${file.name}`,
+            likes: 0,
+          });
+
+        if (insertError) {
+          console.error('Error inserting into images table:', insertError);
+        } else {
+          openAlbum(currentAlbum);  // Refresh the album
+        }
       }
     });
 
-    // Delete image function
+    // Function to delete an image from the album
     async function deleteImage(fileName) {
       const { error } = await supabase.storage.from(bucket).remove([fileName]);
+
       if (error) {
         console.error('Error deleting image:', error);
         alert('Error deleting image!');
       } else {
-        alert('Image deleted successfully!');
-        openAlbum(currentAlbum);  // Refresh album after deletion
+        // Remove from the "images" table in Supabase
+        const { error: deleteError } = await supabase
+          .from('images')
+          .delete()
+          .eq('storage_path', fileName);
+
+        if (deleteError) {
+          console.error('Error deleting image metadata:', deleteError);
+        } else {
+          //alert('Image deleted successfully!');
+          openAlbum(currentAlbum);  // Refresh the album after deletion
+        }
       }
     }
 
-    // Back to the main gallery view
-    document.getElementById('backButton').addEventListener('click', () => {
-      fetchFolders();
-    });
+    // Add right-click event and long press event for deleting images
+    function addDeleteFunctionality(imageItem, fileName) {
+      // Right-click event for deleting images on desktop
+      imageItem.addEventListener('contextmenu', (event) => {
+        event.preventDefault();  // Prevent the default context menu from appearing
+        const confirmDelete = confirm('Are you sure you want to delete this image?');
+        if (confirmDelete) {
+          deleteImage(fileName);
+        }
+      });
 
-    // Fetch folders on page load
-    window.onload = fetchFolders;
+      // Long-press event for mobile to delete an image
+      let touchTimer;
+      imageItem.addEventListener('touchstart', () => {
+        touchTimer = setTimeout(() => {
+          const confirmDelete = confirm('Are you sure you want to delete this image?');
+          if (confirmDelete) {
+            deleteImage(fileName);
+          }
+        }, 1000);  // Trigger delete after 1 second of holding
+      });
+
+      imageItem.addEventListener('touchend', () => {
+        clearTimeout(touchTimer);  // Cancel if the touch is released before 1 second
+      });
+    }
+
+
+    window.onload = () => fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
+    window.deleteImage = deleteImage;  // Expose deleteImage globally
   </script>
 </body>
 
 </html>
-
-
